Detect Python attributes using sysconfig of distutils.sysconfig module, depending on availability

--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
 #############################################################################
 # Configuration for ctools - tools for science analysis of CTA data         #
 # ------------------------------------------------------------------------- #
-# Copyright (C) 2011-2021 Juergen Knoedlseder                               #
+# Copyright (C) 2011-2023 Juergen Knoedlseder                               #
 # ------------------------------------------------------------------------- #
 #                                                                           #
 #  This program is free software: you can redistribute it and/or modify     #
@@ -617,10 +617,11 @@ AC_C_INLINE
 # Python binding requires Python and either the files tools_wrap.cpp and    #
 # tools.py or swig to create these files.  The following conditionals are   #
 # set:                                                                      #
-# WITH_PYTHON    - Python bindings will be built                            #
-# HAVE_SWIG      - swig is available                                        #
-# HAVE_WRAPPERS  - wrappers are available                                   #
-# BUILD_WRAPPERS - build the Python wrappers                                #
+# WITH_PYTHON     - Python bindings will be built                           #
+# HAVE_SWIG       - swig is available                                       #
+# HAVE_WRAPPERS   - wrappers are available                                  #
+# HAVE_SETUPTOOLS - Python setuptools module available                      #
+# BUILD_WRAPPERS  - build the Python wrappers                               #
 #############################################################################
 # Initialise flags
 enable_python="no"
@@ -628,6 +629,7 @@ has_python="no"
 has_python_h="no"
 has_swig="no"
 has_wrappers="no"
+has_setuptools="no"
 build_wrappers="no"
 
 # Check if the code is a git clone. In that case the systems switches to
@@ -678,6 +680,15 @@ else
     AC_SUBST(PYTHON_RELATIVE_IMPORT)  
     AC_SUBST(PYTHON_FROM_DOT_)  
 
+    # Do we have sysconfig?
+    AC_MSG_CHECKING([for the sysconfig Python package])
+    ac_sysconfig_result=`$PYTHON -c "import sysconfig" 2>&1`
+    if test -z "$ac_sysconfig_result"; then
+      AC_MSG_RESULT([yes])
+    else
+      AC_MSG_RESULT([no])
+    fi
+
     # Do we have distutils?
     AC_MSG_CHECKING([for the distutils Python package])
     ac_distutils_result=`$PYTHON -c "import distutils" 2>&1`
@@ -687,10 +698,27 @@ else
       AC_MSG_RESULT([no])
     fi
 
-    # If we have distutils then get python path from distutils ...
-    if test -z "$ac_distutils_result"; then
-      python_path=`$PYTHON -c "import distutils.sysconfig; \
-                               print(distutils.sysconfig.get_python_inc());"`
+    # Do we have setuptools?
+    AC_MSG_CHECKING([for the setuptools Python package])
+    ac_setuptools_result=`$PYTHON -c "import setuptools" 2>&1`
+    if test -z "$ac_setuptools_result"; then
+    AC_MSG_RESULT([yes])
+      has_setuptools="yes"
+    else
+      AC_MSG_RESULT([no])
+    fi
+
+    # If we have sysconfig or distutils then get python path
+    if test -z "$ac_sysconfig_result" || test -z "$ac_distutils_result"; then
+      
+      # Get Python path
+      if test -z "$ac_sysconfig_result"; then
+        python_path=`$PYTHON -c "import sysconfig; \
+                                 print(sysconfig.get_paths()[['include']]);"`
+      else
+        python_path=`$PYTHON -c "import distutils.sysconfig; \
+                                 print(distutils.sysconfig.get_python_inc());"`
+      fi
       if test -n "${python_path}"; then
         SAVED_CPPFLAGS="$CPPFLAGS"
         CPPFLAGS="$CPPFLAGS -I$python_path"
@@ -706,8 +734,13 @@ else
       # to this value as otherwise we get trouble with name mangling (that changed)
       if [test "x$osx_mavericks" = "xyes"]; then
         AC_MSG_CHECKING([Python MACOSX_DEPLOYMENT_TARGET])
-        python_target=`$PYTHON -c "from distutils import sysconfig; \
-                                   print(sysconfig.get_config_vars()[['MACOSX_DEPLOYMENT_TARGET']]);" 2> /dev/null`
+        if test -z "$ac_sysconfig_result"; then
+          python_target=`$PYTHON -c "import sysconfig; \
+                                     print(sysconfig.get_config_vars()[['MACOSX_DEPLOYMENT_TARGET']]);" 2> /dev/null`
+        else
+          python_target=`$PYTHON -c "from distutils import sysconfig; \
+                                     print(sysconfig.get_config_vars()[['MACOSX_DEPLOYMENT_TARGET']]);" 2> /dev/null`
+        fi
         python_compact_target=`echo $python_target | sed 's/\(10\.[[0-9]]*\).*/\1/' | sed -e 's/\.//g'`
         case $python_compact_target in
           (*[!0-9]*|'')
